fixed overflow on mobile

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,6 +3,15 @@ body,html {
     padding: 0;
   }
 
+  .title {
+    padding-left: 0.25em;
+    padding-right: 0.25em;
+    padding-top: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    font-size: 2.5rem;
+  }
+
   .about {
     padding-top: 1rem;
     color: white;
